# renai

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  test.ipynb
.ipynb_checkpoints/: docker-compose-checkpoint.yml
api/renai-py/: README.md
api/renai-rs/: Cargo.toml
crates/noth/: Cargo.toml
crates/noth-lakehouse/: Cargo.toml
crates/noth-lakehouse/src/: scrape.rs
crates/noth-util/: Cargo.toml
crates/noth-util/src/: fs.rs  lib.rs
crates/noth-util/src/client_ext/: couchdb.rs  mod.rs  util.rs
crates/noth-warehouse/: Cargo.toml
crates/noth-warehouse/sql/: 01_1_create_stock_tables.sql  01_2_create_crypto_tables.sql  01_3_create_econ_tables.sql  01_create_tbls.sql  02_create_views.sql
crates/noth-warehouse/src/: api.rs
crates/noth-warehouse/src/schema/: common.rs
crates/noth-warehouse/src/schema/crypto/: binance.rs  index.rs  kraken.rs  kucoin.rs  mod.rs
crates/noth-warehouse/src/schema/econ/: mod.rs  us.rs  us_lobbying.rs
crates/noth-warehouse/src/schema/stock/: filings.rs  index.rs  metrics.rs  mod.rs  prices.rs  senate_lobbying.rs
crates/noth-warehouse/src/scripts/: 00_create_schemas.sql  01_create_tbls.sql
crates/noth-web/: Cargo.toml
crates/noth-web/src/: main.rs
crates/noth-web/static/css/: bear.css
crates/noth-web/static/js/: app.js
crates/noth-web/static/ts/: app.ts
crates/noth/src/: cli.rs  main.rs
crates/renai/: Cargo.toml
crates/renai-app/: Cargo.toml
crates/renai-app/js/: example.js
crates/renai-app/src/: api.rs  main.rs
crates/renai-app/templates/: root.html.hbs  stocks.html.hbs
crates/renai-client/: Cargo.toml
crates/renai-client/src/: lib.rs
crates/renai-client/src/client_ext/: couchdb.rs  mod.rs  util.rs
crates/renai-common/: Cargo.toml
crates/renai-common/src/: fs.rs  lib.rs
crates/renai-fs/: BLUEPRINT.md  Cargo.toml
crates/renai-fs/src/: db.rs  fetch.rs  lib.rs  main.rs
crates/renai-fs/src/endp/: mod.rs
crates/renai-fs/src/schema/: common_de.rs  mod.rs
crates/renai-fs/src/schema/stocks/: exe.rs  mod.rs
crates/renai-fs/src/schema/stocks/core/: mod.rs  us.rs
crates/renai-fs/src/schema/stocks/index/: us.rs
crates/renai-fs/src/schema/stocks/metrics/: us.rs
crates/renai-fs/src/schema/stocks/price/: mod.rs  yahoo_finance.rs
crates/renai-fs/src/schema2/: mod.rs
crates/renai-fs/src/schema2/stocks/: collect.rs  common_de.rs  exe.rs  mod.rs  price.rs
crates/renai-fs/src/schema2/stocks/core/: us.rs
crates/renai-fs/src/schema2/stocks/index/: mod.rs
crates/renai-fs/src/schema2/stocks/price/: mod.rs  yahoo_finance.rs
crates/renai-gui/: Cargo.toml
crates/renai-pg/: Cargo.toml
crates/renai-pg/src/: api.rs  lib.rs  main.rs
crates/renai-pg/src/schema/crypto/: binance.rs  index.rs  kraken.rs  kucoin.rs  mod.rs
crates/renai-pg/src/schema/econ/: us.rs
crates/renai-pg/src/schema/stock/: index.rs  prices.rs
crates/renai-pg/src/scripts/: 01_create_tbls.sql  02_create_views.sql
crates/renai-postgres/: Cargo.toml
crates/renai-postgres/src/: fs.rs  lib.rs  main.rs
crates/renai-postgres/src/migrations/: 01_stocks.sql
crates/renai-postgres/src/schema/: common_de.rs  mod.rs
crates/renai-postgres/src/schema/crypto/: kraken.rs  mod.rs
crates/renai-postgres/src/schema/stock/: fundamentals.rs  index.rs  metrics.rs  mod.rs  price.rs  prices.rs
crates/renai-postgres/src/scripts/: 01_create_tbls.sql  01_stocks.sql  02_create_views.sql  02_crypto.sql
crates/renai-postgres/src/sql_scripts/: 01_stocks.sql
crates/renai-web/: Cargo.toml
crates/renai-web/src/: main.rs
crates/renai-web/src/api/: mod.rs  stock.rs
crates/renai-web/static/html/: index.html
crates/renai/src/: cli.rs  main.rs
dev-py/: common.py  initial.ipynb  main.py  peers_via_corr.ipynb  schema.py  security.py  tables.ipynb  test.py  tug_of_war.ipynb
dev-py/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  initial-checkpoint.ipynb
dev-py/restapi/: database.py
doc/: book.toml
doc/src/design/: databases.md
doc/src/schemas/: stock.md
py-api/: README.md  dev.ipynb  renai.py  test.ipynb
research/: dev.ipynb  lib.py
src/: cli.rs  client_ext.rs  lib.rs  main.rs  schema.rs  ui.rs  www.rs
src/endp/: sec.rs  us_company_index.rs  yahoo_finance.rs
