[workspace] 
members = [ "api/renai-rs", "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Vostanis"]
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/Vostanis/renai"
readme = "README.md"

[workspace.dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4.38" }
clap = { version = "4.5.13", features = ["derive"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.3" }
futures = { version = "0.3.3" }
indicatif = { version = "0.17.8" }
log = { version = "0.4.22" }
num_cpus = { version = "1.16.0" }
rayon = { version = "1.10.0" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }