[package]
edition = "2021"
name = "noth-lakehouse"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
elasticsearch.workspace = true
futures.workspace = true
noth-util = { path = "../noth-util" }
noth-warehouse = { path = "../noth-warehouse" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
