[package]
name = "noth"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
noth-warehouse = { version = "0.1.0", path = "../noth-warehouse" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.12"
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
