[package]
name = "renai-common"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zip = "2.2.0"