[package]
name = "renai-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
indicatif = "0.17.8"
log = "0.4.22"
num_cpus = "1.16.0"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full", "rt", "fs", "io-util"] }
zip = "2.1.3"