[package]
name = "renai-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = "0.4.38"
colored.workspace = true
dotenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
kvapi = "0.1.0"
lazy_static = "1.5.0"
log.workspace = true
num_cpus.workspace = true
postgres-types = "0.2.8"
rayon.workspace = true
renai-client = { version = "0.1.0", path = "../renai-client" }
renai-common = { version = "0.1.0", path = "../renai-common" }
renai-fs = { version = "0.1.0", path = "../renai-fs" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.8"
tokio.workspace = true
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.2.0"
