[package]
name = "renai-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
renai-client = { version = "0.1.0", path = "../renai-client" }
sqlx = { version = "0.8.0", features = ["postgres"] }
tokio-postgres = "0.7.11"
