[package]
name = "renai-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
colored.workspace = true
futures.workspace = true
log.workspace = true
num_cpus.workspace = true
renai-client = { version = "0.1.0", path = "../renai-client" }
renai-fs = { version = "0.1.0", path = "../renai-fs" }
tokio.workspace = true
# sqlx.workspace = true
tokio-postgres = "0.7.11"
