[package]
edition = "2021"
name = "renai-web"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
tokio.workspace = true
