[package]
edition = "2021"
name = "renai-web"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = "0.4.38"
deadpool-postgres = "0.14.0"
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.12"
utoipa = "5.2.0"
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
