[package]
name = "renai"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
renai-client = { version = "0.1.0", path = "../renai-client" }
renai-common = { version = "0.1.0", path = "../renai-common" }
renai-fs = { version = "0.1.0", path = "../renai-fs" }
renai-postgres = { version = "0.1.0", path = "../renai-postgres" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.12"
tracing = "0.1.40"
